--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    //docker run --name my-postgres -e POSTGRES_USER=dis -e POSTGRES_PASSWORD=dis -e POSTGRES_DB=BackendStarterDb -p 5432:5432 -d postgres
+    "DefaultConnection": "Host=localhost;Database=BackendStarterDb;Username=dis;Password=dis;"
   }
 }
