--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -7,11 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Common\" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="9.0.1" />
+      <Folder Include="API.Tests\" />
+      <Folder Include="Application.Tests\" />
+      <Folder Include="Infrastructure.Tests\" />
     </ItemGroup>
 
 </Project>
