--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -7,14 +7,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Common\Behaviors\" />
       <Folder Include="Common\Exceptions\" />
-      <Folder Include="Features\Products\Validators\" />
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="13.0.1" />
-      <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.5.1" />
+      <PackageReference Include="FluentValidation" Version="11.11.0" />
+      <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
       <PackageReference Include="MediatR" Version="12.4.1" />
       <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
     </ItemGroup>
