--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
   "ConnectionStrings": {
     //docker run --name my-postgres -e POSTGRES_USER=dis -e POSTGRES_PASSWORD=dis -e POSTGRES_DB=BackendStarterDb -p 5432:5432 -d postgres
-    "DefaultConnection": "Host=localhost;Database=BackendStarterDb;Username=dis;Password=dis;"
+    "DefaultConnection": "Host=localhost;Database=test_db;Username=dis;Password=dis;"
   }
 }
