--- a/API/API.csproj
+++ b/API/API.csproj
@@ -26,6 +26,12 @@
         <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.3.1"/>
         <PackageReference Include="Npgsql" Version="9.0.2"/>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.3"/>
+        <PackageReference Include="Serilog.AspNetCore" Version="9.0.0"/>
+        <PackageReference Include="Serilog.Formatting.Compact" Version="3.0.0"/>
+        <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0"/>
+        <PackageReference Include="Serilog.Sinks.File" Version="6.0.0"/>
+        <PackageReference Include="Serilog.Sinks.Seq" Version="9.0.0"/>
+        <PackageReference Include="Serilog.Ui.Web" Version="2.1.5"/>
         <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="7.2.0"/>
         <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="7.2.0"/>
         <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="7.2.0"/>
@@ -41,6 +47,10 @@
         <Content Include="..\.dockerignore">
             <Link>.dockerignore</Link>
         </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Folder Include="logs\"/>
     </ItemGroup>
 
 </Project>
