--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    //docker run --name my-postgres -e POSTGRES_USER=dis -e POSTGRES_PASSWORD=dis -e POSTGRES_DB=BackendStarterDb -p 5432:5432 -d postgres
+    //docker run --name my-postgres -e POSTGRES_USER=dis -e POSTGRES_PASSWORD=dis -e POSTGRES_DB=test_db -p 5432:5432 -d postgres
     "DefaultConnection": "Host=localhost;Database=test_db;Username=dis;Password=dis;"
   }
 }
